GNOME Bugzilla – Bug 754630
libs: "ll" printf modifier isn't available on MinGW
Last modified: 2015-09-06 15:32:43 UTC
Created attachment 310742 [details] [review] Fix this problem gst-libs/gst/video/video-dither.c uses "llx" for printing unsigned long long int value. It causes a build error on MinGW because "llx" isn't portable. We can use G_GINT64_MODIFIER instead of "ll" for 64bit int value.
Also fixed this before pushing your commit: video-dither.c: In function 'gst_video_dither_new': video-dither.c:416:14: warning: format '%lx' expects argument of type 'long unsigned int', but argument 8 has type 'long long unsigned int' [-Wformat=] GST_DEBUG ("mask64 %08" G_GINT64_MODIFIER "x", ^ commit 3e41e784bedd56c796834aabf022e8a28f79f691 Author: Kouhei Sutou <kou@clear-code.com> Date: Sun Sep 6 18:17:15 2015 +0900 libs: Fix build error on MinGW where "%ll" is not available "ll" isn't available on MinGW. We can use G_GINT64_MODIFIER for portable 64bit size data modifier. https://bugzilla.gnome.org/show_bug.cgi?id=754630